# masso-learning-platform

./: .gitignore  CLAUDE.md  README.md
.claude/agents/: architect.md  backend.md  data.md  frontend.md  infra.md  security.md
.claude/skills/: lint.md  migrate.md  sandbox-audit.md  smoke.md  test.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/agents/: assessment_agent.py  profile_agent.py  scenario_agent.py
backend/app/api/: admin_llm.py  admin_sandbox.py  auth.py  events.py  health.py  reports.py  scenarios.py  sessions.py  skills.py  users.py  verification.py  ws.py
backend/app/core/: config.py  deps.py  errors.py  response.py  security.py
backend/app/db/: chromadb.py  neo4j.py  neo4j_schema.py  postgres.py  redis.py  seed.py
backend/app/llm/: base.py  gateway.py
backend/app/llm/adapters/: anthropic_adapter.py  ollama_adapter.py  openai_adapter.py  template_adapter.py
backend/app/models/: __init__.py  assessment.py  audit.py  base.py  infra.py  scenario.py  session.py  user.py
backend/app/sandbox/: images.py  manager.py
backend/app/schemas/: __init__.py  admin.py  auth.py  common.py  events.py  reports.py  scenarios.py  sessions.py  skills.py  users.py  verification.py  websocket.py
backend/app/services/: audit_service.py  event_publisher.py  profile_service.py  scenario_service.py  security_service.py  session_service.py  terminal_service.py  user_service.py
backend/tests/unit/: test_api_routes.py  test_assessment_agent.py  test_event_publisher.py  test_llm_gateway.py  test_models.py  test_profile_agent.py  test_sandbox_manager.py  test_scaffold.py  test_scenario_agent.py  test_schemas.py  test_security.py  test_session_service.py  test_terminal_token.py
frontend/: package-lock.json
frontend/app/: layout.tsx
frontend/lib/: api.ts  auth-context.tsx  types.ts  websocket.ts
infra/: prometheus.yml
infra/docker/: .env.example  docker-compose.dev.yml
infra/nginx/: masso.conf
(+17 files in other folders)
