[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "masso-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    # Web framework
    "fastapi==0.136.*",
    "uvicorn[standard]==0.34.*",
    "python-multipart==0.0.*",
    "websockets==14.*",
    # Data validation
    "pydantic==2.13.*",
    "pydantic-settings==2.7.*",
    # Database — PostgreSQL
    "sqlalchemy==2.0.*",
    "alembic==1.14.*",
    "asyncpg==0.30.*",
    # Database — Neo4j
    "neo4j==5.26.*",
    # Database — ChromaDB
    "chromadb==1.5.*",
    # Database — Redis
    "redis==5.2.*",
    # Agents
    "langgraph==1.1.*",
    "langchain-core==1.3.*",
    # LLM providers
    "openai==1.59.*",
    "anthropic==0.42.*",
    # Security
    "passlib[bcrypt]==1.7.*",
    "python-jose[cryptography]==3.3.*",
    # Observability
    "prometheus-client==0.21.*",
    # Reports
    "weasyprint==63.*",
    # Docker SDK
    "docker==7.1.*",
    # HTTP client (for Ollama adapter)
    "httpx==0.28.*",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.*",
    "pytest-asyncio==0.25.*",
    "pytest-cov==6.0.*",
    "httpx==0.28.*",
    "ruff==0.8.*",
    "mypy==1.14.*",
    # mypy stubs
    "types-passlib",
    "types-python-jose",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = [
    "E501",
    # TCH rules conflict with FastAPI's Annotated[..., Depends(...)] pattern
    # which requires runtime imports even under `from __future__ import annotations`.
    "TC001",
    "TC002",
    "TC003",
]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = false
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "smoke: end-to-end smoke tests requiring all services running",
    "integration: tests hitting real databases",
]
